test/parser/good/expr.ks
int main()
{
    int x = 10;
    x = x + 5;
    int y = x * 2;
    return y;
}
