test/parser/bad/space_in_keyword.ks
int main( void a )
{
    retur n 0;
}
